# smt-all-the-things

./: LICENSE  README.md  smt-all-the-things.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
