cabal-version: 2.2

name:                smt-all-the-things
version:             0.1.0.0
synopsis:            SMT solver examples and utilities
description:         A collection of examples and utilities using SMT solvers
homepage:            https://github.com/ocramz/smt-all-the-things#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Math
build-type:          Simple
extra-source-files:  README.md

common warnings
    ghc-options: -Wall

executable smt-all-the-things-exe
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.17 && <5
                    , sbv
                    , smt-all-the-things
    hs-source-dirs:   app
    default-language: Haskell2010

library
    import:           warnings
    exposed-modules:  Lib
    build-depends:    base >=4.17 && <5
                    , sbv
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite smt-all-the-things-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base >=4.17 && <5
                    , sbv
                    , smt-all-the-things